<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp"
              tools:context="com.test.demo.ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_name"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/hotel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hotel_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_address"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/hotel_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/address"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_city"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/hotel_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/hotel_city_demo"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/check_in_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/select_date"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_out_time"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/check_out_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/select_date"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_type"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/room_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/room_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_price"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/room_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_price_demo"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/tip_type"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/tip_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_type_demo"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert"
                    android:textSize="14sp"/>


                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/query"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/query_valid"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hotel_id"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/id_demo"
                    android:textSize="17sp"/>

                <Button
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/query_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/query_all"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
